# noCanren

./: .gitignore  .gitmodules  .merlin  CHANGES  META  Makefile  Makefile.ob  MiniKanren.ml  README.md  Stream.ml  _styles.css  _tags  a.ml  a.out  all  all.hs  build.sh  configure  demo.ml  dune  dune-project  madnessFC.ml  match1.ml  myocamlbuild.ml  noCanren.install  noCanren.opam  opam  qtc-eff.files  test.ml
.github/: CODEOWNERS
.github/workflows/: Build.yml  Build413.yml  Build413eucpp.yml
SpecialCanren/: dune
SpecialCanren/GCW/: GCW.ml2mk.ml  GCW.t  GCW_run.ml  dune
SpecialCanren/bridge/: bridge.ml2mk.ml  bridge.t  bridge_run.ml  dune
camlp5/: pa_minikanren.ml  pa_ocanren.ml
config/: discover.ml  dune  gentests.ml
jsoo_runner/: .merlin  jsoo_runner.ml
micro/: GCW.ml2mk.ml  GCW_run.ml  bottles.ml2mk.ml  bottles_run.ml  bridge.ml2mk.ml  bridge_run.ml  hanoi.ml2mk.ml  hanoi_run.ml  lorry.ml2mk.ml  lorry_run.ml  scheme_interpreter.ml2mk.ml  scheme_interpreter_run.ml  sudoku4x4.ml2mk.ml  sudoku4x4_run.ml  unify.ml2mk.ml  unify_run.ml
papers/EPTCS/: demo.tex  evaluation.tex  examples.tex  goals.tex
papers/mlw2016pres/: .gitignore  Makefile  presentation.tex
ppx/: .merlin  gmap.ml  pa_minikanren_bin.ml  ppx_deriving_gt.ml  ppx_deriving_gt.mllib  ppx_deriving_showT.ml  ppx_ocanren_all.ml  ppx_repr.ml  show.ml  smart_logger.ml  smart_logger_bin.ml  smart_logger_impl.ml
ppx/plugins/: show.ml
prof/: TimeHelper.ml  logo1.ml  numero_decls.ml
regression/: .#test0match.ml  .gitignore  .merlin  Makefile  Quine_decls.ml  TimeHelper.ml  miniHelpers.ml  stlc.ml  stlcPPX.ml  test.sh  test000.ml  test001.ml  test002.ml  test002sort.ml  test003.ml  test004.ml  test005.ml  test006.ml  test007.ml  test008.ml  test009.ml  test010.ml  test011.ml  test013.ml  test014.ml  test015runaway.ml  test016sorto.ml  test017condeorder.ml  test017make_var.ml  test018prjc.ml  test01match.ml  test020_sym_conj.ml  test021_fair_conj.ml  test022_bridge.ml  test022_einstein.ml  test023_bridge.ml  test024_lorry.ml  test025_hanoi.ml  test02match.ml  test0domains.ml  (+29 more)
regression/orig/: GCW.ml  bottles.ml  bridge.ml  einstein.ml  hanoi.ml  hanoi2.ml
regression/performance/: .gitignore  Makefile  Quine_decls.ml  mini_from_microKanren.scm  numbers.scm  numbers_helper.rkt  numero_decls.ml  q.scm  script.gnuplot  test001_expo1.chez  test001_expo1.ml  test001_expo1.mu.scm  test001_expo1.rkt  test002.chez  test002.mu.scm  test002_logo.rkt  test002_logo1.ml  test003.chez  test003.mu.scm  test003_sort.ml  test003_sort.rkt  test004.chez  test004.mu.scm  test004_logo2.ml  test004_logo2.rkt  test005.rkt  test005_quines1.chez  test005_quines1.rkt  test005_thrines.ml  test006.chez  test006.rkt  test006_twines.ml  test007.chez  test007.rkt  test007_quines.ml
samples/: .merlin  GCW.ml2mk.ml  GCW.t  GCW_run.ml  Makefile  bottles.ml2mk.ml  bottles.t  bottles_run.ml  bridge.ml2mk.ml  bridge.t  bridge_run.ml  car_wheels.ml2mk.ml  car_wheels.t  car_wheels_run.ml  dune  einstein.ml2mk.ml  einstein.t  einstein_run.ml  hanoi.ml2mk.ml  hanoi.t  hanoi2.ml2mk.ml  hanoi2_run.ml  hanoi_run.ml  hm_inferencer.ml2mk.ml  hm_inferencer.t  hm_inferencer_run.ml  logic_interpreter.ml2mk.ml  logic_interpreter.t  logic_interpreter_run.ml  lorry.ml  lorry.ml2mk.ml  lorry_run.ml  maybe_test.ml2mk.ml  maybe_test_run.ml  quine_decls.ml  scheme_interpreter.ml2mk.ml  scheme_interpreter_run.ml  sudoku4x4.ml2mk.ml  sudoku4x4_run.ml  thrines  (+3 more)
samples/codegen/: dune  nat_demo.ml  run.t
samples/multifiles/: dune  mul.t  mul_run.ml  test_mul.ml2mk.ml  test_nat.ml2mk.ml
samples/multifiles/stuff/: dune  test_add.ml  test_mul.ml  test_nat.ml
src/: .merlin  .ocamlformat  Deep.ml  Deep.mli  MKStd.ml  MiniKanren.ml  MiniKanren.mli  MiniKanren.mllib  MiniKanrenCore.ml  MiniKanrenCore.mli  MiniKanrenImpl.ml  MiniKanrenStd.ml  MiniKanrenStd.mli  Untype_more.ml  beta_reductor.ml  call_by_need.ml  dune  implicitPrinters.ml  libunify.clib  miniKanrenStd.ml  noCanren.ml  normalizer.ml  printer_in_spec.ml  ptmap.ml  put_distrib.ml  put_distrib.mli  result.ml  sinonims_synthesis.ml  succ.ml  translator.ml  translator_unnesting.ml  unify.c  util.ml
src/core/: Core.ml  Core.mli  RStream.ml  RStream.mli
src_test/: test.ml
std/: List.ml  ListRaw.ml2mk.ml  Maybe.ml  Maybe.mli  Nat.ml  Option.ml  Peano.ml  PeanoRaw.ml2mk.ml  Std.ml  dune
test_memo/: dune  run.t
tests/WGC/: WGC.ml2mk.ml  WGC.t  WGC_run.ml  dune
tests/btv/: btv.ml2mk.ml  btv.t  btv_run.ml  dune
tests/failwith/: dune  failwith_test.ml2mk.ml  failwith_test.t  failwith_test_run.ml
tests/list/: .gitignore  dune  list_test.ml2mk.ml  list_test.t  list_test_run.ml  list_test_run2.ml  unnesting.ml2mk.ml
tests/maybe/: dune  maybe_test.ml2mk.ml  maybe_test.t  maybe_test_run.ml
tests/modules/: modules_test.t
tests/ocaml_code_test/: dune  list_test.t  ocaml_code.ml2mk.ml
tests/peano/: dune  peano_test.ml2mk.ml  peano_test.t  peano_test_run.ml
tests/reexport/: Input.ml  dune  main.ml  run.t
tests/waterPuzzle/: dune  waterPuzzle.ml2mk.ml  waterPuzzle.t
tests/wildcard/: bottles.ml2mk.ml  bottles.t  bottles_run.ml  dune  test.ml2mk.ml  test.t
toplevel/: .gitignore  .merlin  Makefile  Makefile.conf  a.out  colorize.cppo.ml  examples.ml  indent.cppo.ml  index.html  mystdlib.js  toplevel.cppo.ml
transl/: .merlin  PutDistrib.cppo.ml  PutDistrib.ml  compose.ml2mk.ml  folds.ml2mk.ml  folds_run.ml  genmain.cppo.ml  genmain.ml  hm_inferencer.ml2mk.ml  hm_inferencer_run.ml  logic.ml2mk.ml  logic_run.ml  ml2mk_pp.ml  ml_to_mk.ml  ml_to_mk.mlpack  peano.ml  peano.ml2mk.ml  peano_run.ml  printer_in_spec.ml  scheme_interpreter.ml2mk.ml  scheme_interpreter_run.ml  smart_mapper.ml  tabling_test.ml2mk.ml  tabling_test_run.ml  test4.ml2mk.ml  test4_run.ml  translator.ml  types_test.ml2mk.ml  util.ml
transl/games/: game1_GCW.ml2mk.ml  game1_GCW_run.ml  game2_bridge.ml2mk.ml  game2_bridge_run.ml  hanoi_run.ml  (+11 more)
web/: README.md  _styles.css  expList.js  expListButtons.js  main.css  mktree.css  mktree.js  runOnLoad.src.js
wildcard/: bottles_run.ml  dune  test.ml2mk.ml  test.t  test_run.ml
(+24 files in other folders)
