(env
 (_
  (flags
   (:standard -w -9-27 -warn-error -26-32))))

(executable
 (name noCanren)
 (public_name noCanren)
 (package noCanren)
 (libraries compiler-libs.common ppxlib)
 (modules
  Util
  Put_distrib
  Translator
  Translator_unnesting
  Printer_in_spec
  Untype_more
  noCanren)
 (preprocess
  (pps ppxlib.metaquot ppx_optcomp)))
