(env
 (_
  (flags
   (:standard -rectypes -w -33))))

(library
 (name Maybe)
 (modules Maybe)
 (public_name noCanren.Maybe)
 (libraries GT OCanren)
 (preprocess
  (per_module
   ((pps
     ppx_expect
     ppx_inline_test
     OCanren-ppx.ppx_repr
     OCanren-ppx.ppx_fresh
     GT.ppx_all)
    Maybe))))

(library
 (name Peano)
 (modules Peano PeanoRaw)
 (public_name noCanren.Peano)
 (libraries GT OCanren)
 (preprocess
  (pps
   ppx_expect
   ppx_inline_test
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   GT.ppx_all)))

(rule
 (targets PeanoRaw.ml)
 (deps
  (:exec %{project_root}/src/noCanren.exe)
  (:input PeanoRaw.ml2mk.ml))
 (action
  (run
   sh
   -c
   "%{exec} -w -8 -rectypes -I `ocamlfind -query OCanren` %{input} -o %{targets} | ocamlformat --enable-outside-detected-project --impl -")))
