(executable
 (name bridge_run)
 (libraries GT OCanren OCanren.tester)
 (modules bridge bridge_run)
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   OCanren-ppx.ppx_distrib
   -new-typenames
   GT.ppx_all)))

(rule
 (targets bridge.ml)
 (deps
  (:exec %{project_root}/src/noCanren.exe)
  (:input bridge.ml2mk.ml))
 (action
  (run
   sh
   -c
   "%{exec} -w -8 -unnesting-mode -without-activate-tactics %{input} -rectypes -o %{targets} | ocamlformat --enable-outside-detected-project --impl -")))

(cram
 (deps
  bridge.ml2mk.ml
  (package noCanren)))
