(env
 (_
  (flags
   (:standard -rectypes -w -27-33-39))))

(rule
 (targets btv.ml)
 (deps
  (:exec %{project_root}/src/noCanren.exe)
  (:peano %{project_root}/std/.Peano.objs/byte/peano.cmi)
  (:list %{project_root}/std/.List.objs/byte/list.cmi)
  (:input btv.ml2mk.ml))
 (action
  (run
   sh
   -c
   "%{exec} -w -8 %{input} -rectypes -o %{targets} | ocamlformat --enable-outside-detected-project --impl -")))

(executable
 (name btv_run)
 (libraries GT OCanren OCanren.tester Peano List)
 (modules btv btv_run)
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   OCanren-ppx.ppx_distrib
   GT.ppx_all)))

(cram
 (deps ./btv_run.exe))
