(env
 (_
  (flags
   (:standard -rectypes -w -27-33-39))))

(rule
 (targets ocaml_code.ml)
 (deps
  (:peano %{project_root}/std/.Peano.objs/byte/peano.cmi)
  (:exec %{project_root}/src/noCanren.exe)
  (:input ocaml_code.ml2mk.ml))
 (action
  (run
   sh
   -c
   "%{exec} -w -8 %{input} -rectypes -o %{targets} | ocamlformat --enable-outside-detected-project --impl -")))

(executable
 (name ocaml_code)
 (flags
  (:standard -rectypes))
 (libraries GT OCanren OCanren.tester Peano)
 (modules ocaml_code)
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   OCanren-ppx.ppx_distrib
   -new-typenames
   GT.ppx_all)))

(cram
 (deps ./ocaml_code.exe))
