(env
 (_
  (flags
   (:standard -rectypes -w -27-33-39))))

(rule
 (targets peano_test.ml)
 (deps
  (:peano %{project_root}/std/.Peano.objs/byte/peano.cmi)
  (:exec %{project_root}/src/noCanren.exe)
  (:input peano_test.ml2mk.ml))
 (action
  (run
   sh
   -c
   "%{exec} -w -8 %{input} -rectypes -o %{targets} | ocamlformat --enable-outside-detected-project --impl -")))

(executable
 (name peano_test_run)
 (flags
  (:standard -rectypes))
 (libraries GT OCanren OCanren.tester Peano)
 (modules peano_test peano_test_run)
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   OCanren-ppx.ppx_distrib
   GT.ppx_all)))

(cram
 (deps ./peano_test_run.exe))
