(env
 (_
  (flags
   (:standard -rectypes -w -27-33-8))))

(executable
 (name main)
 (modules main)
 (libraries test_reexport)
 (preprocess
  (pps OCanren-ppx.ppx_distrib GT.ppx_all)))

(cram
 (deps ./main.exe))

(library
 (name test_reexport)
 (modules Input Output)
 (libraries OCanren)
 (preprocess
  (pps OCanren-ppx.ppx_fresh OCanren-ppx.ppx_distrib GT.ppx_all)))

(rule
 (targets Output.ml)
 (deps
  %{project_root}/config/path-OCanren.cfg
  %{project_root}/config/path-GT.cfg
  (package OCanren)
  (:dep Input.ml))
 (action
  (progn
   (run
    noCanren
    -w
    -8
    -rectypes
    -high-order-mode
    ; switches to typecheck lozovml
    -reexport-path
    Input
    -distribs
    -useGT
    -I
    %{read-lines:../../config/path-OCanren.cfg}
    %{dep}
    -o
    %{targets})
   (run rm -f Input.cmi))))
