(env
 (_
  (flags
   (:standard -rectypes -w -27-33-37-39))))

(rule
 (targets waterPuzzle.ml)
 (deps
  (:list %{project_root}/std/.List.objs/byte/list.cmi)
  (:maybe %{project_root}/std/.Maybe.objs/byte/maybe.cmi)
  (:exec %{project_root}/src/noCanren.exe)
  (:input waterPuzzle.ml2mk.ml)
  (:pp5 %{project_root}/pp5+gt+plugins+ocanren+logger+dump.exe))
 (action
  (run
   sh
   -c
   "%{exec} -pp %{pp5} -w -8 %{input} -rectypes -o %{targets} | ocamlformat --enable-outside-detected-project --impl -")))

(executable
 (name waterPuzzle)
 (libraries GT OCanren OCanren.tester Maybe List)
 (modules waterPuzzle)
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   OCanren-ppx.ppx_distrib
   -new-typenames
   GT.ppx_all)))

(cram
 (deps ./waterPuzzle.exe))
