(env
 (_
  (flags
   (:standard -rectypes -w -27-33))))

(executable
 (name test_run)
 (libraries GT OCanren OCanren.tester)
 (modules test test_run)
 (flags
  (:standard -w -11))
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   OCanren-ppx.ppx_distrib
   GT.ppx_all)))

(rule
 (targets test.ml)
 (deps
  (:exec %{project_root}/src/noCanren.exe)
  (:input test.ml2mk.ml))
 (action
  (run
   sh
   -c
   "%{exec} %{input} -w -11 -o %{targets} | ocamlformat --enable-outside-detected-project --impl -")))

(executable
 (name bottles_run)
 ;(package noCanren-tests)
 ;(public_name noCanren-tests.bottles)
 (libraries GT OCanren OCanren.tester)
 (modules bottles bottles_run)
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   OCanren-ppx.ppx_distrib
   -new-typenames
   GT.ppx_all)))

(rule
 (targets bottles.ml)
 (deps
  (:exec %{project_root}/src/noCanren.exe)
  (:input bottles.ml2mk.ml))
 (action
  (run
   sh
   -c
   "%{exec} %{input} -o %{targets} | ocamlformat --enable-outside-detected-project --impl -")))

(cram
 (deps ./test_run.exe ./bottles_run.exe))
